Bug fix for Firefox where text in select was getting clipped

--- a/console/app/assets/stylesheets/_forms.scss
+++ b/console/app/assets/stylesheets/_forms.scss
@@ -740,7 +740,7 @@ legend + .control-group {
     padding-right: 0;
   }
   select {
-    height: 36px;
+    height: auto;
   }
 }
 
